# cys-terminal

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE.md  README.en.md  README.md  REVIEW-multimaster-R1.md  REVIEW-multimaster-R2.md  SECURITY.md  build.rs  diff.txt  pack-files.txt  pack-manifest.json  pack-manifest.json.minisig  pack-manifest.json.new  pack-manifest.json.sig
cysjavis-pack/: CLAUDE.md.template  README.md  acl.json  agents.json  board-catalog.json  schedule.json  soul.md  trusted-keys.json
dist-win/: README.md  cys-x64.wxs  cys.wxs
docs/: COMPETITIVE_ANALYSIS.md  CONTROL_CENTER_DESIGN.md  DESIGN-dept-qualified-keys-v2.md  DESIGN-noshutdown-pack-update-v2.md  DESIGN-noshutdown-pack-update.md  DESIGN-seamless-update.md  INSTALL-Windows-KR.md  INSTALL.md  MIGRATION-seed-once-state-restore.md  RELEASE.md  RELEASE_NOTES_0.2.0.md  RELEASE_NOTES_0.2.1.md  RELEASE_NOTES_0.2.2.md  RSI_LEARNING_DESIGN.md  RSI_LEARNING_DIRECTIVE.draft.md  TRADEMARK_RISK_RESEARCH.md  USAGE_OBSERVABILITY_PHASE2_PLAN.md  WINDOWS_VALIDATION.md  analytics_e2e.py  cost_persist_e2e.py  cysjavis-editor-primitives-design.md  event_capture_e2e.py  index.html  javis-native-features-proposal-2026-06-12.md  learn_e2e.py  noshutdown_verify.py  redact_e2e.py  rsi_e2e.py  sessions_e2e.py  skills_e2e.py  usage_e2e.py  usage_report_e2e.py  weekly_e2e.py
scripts/: build-macos-signed.sh  bundle-prep.sh  dedup-git-core.sh  deploy_gate.py  make-update-manifest.sh  prep-mac-runtime.sh  release-lane-check.sh  scan-pack-secrets.sh  secret-scan.sh  sync-pack.sh  version-check.sh  (+1 more)
(+235 files in other folders)
